# aiops-project

./: .coverage  .env.example  .pre-commit-config.yaml  AI_CHATBOT_GUIDE.md  CICD_DOCUMENTATION.md  Dockerfile  EXAMPLES.md  Makefile  QUICKSTART.md  README.md  SETUP.md  alembic.ini  architecture_v2.mmd  docker-compose.yml  project_schema.mmd  pyproject.toml  requirements.txt  setup.sh
.github/workflows/: ci.yml  main.yml
alembic/: env.py
app/: database.py  main.py
app/api/: n8n_routes.py
app/models/: agi_history.py  history.py  schemas.py
app/services/: ai_agent_service.py  ai_service.py  analysis_service.py  ansible_service.py  automation_service.py  cache_service.py  chatbot_service.py  code_analysis_service.py  deployment_service.py  log_analysis_service.py  mikrotik_service.py  n8n_service.py  notification_service.py  orchestration_service.py  playbook_service.py  post_analysis_service.py  proxmox_service.py  qwen_service.py  streaming_service.py  system_service.py  telegram_service.py  unifi_service.py  verification_service.py
app/utils/: circuit_breaker.py  logger.py
bot/: main.py
config/: alertmanager.yml  prometheus.yml  settings.py
config/n8n/workflows/: aiops-alert-handler.json
docs/: N8N_INTEGRATION.md  QUICKSTART.md  ci-workflow.yml
n8n/: alert_workflow.json
reports/: key_takeaways.md  repository_analysis.md  resilience_demo_report.html
scripts/: extract_key_takeaways.py  setup.sh
tests/: conftest.py  test_ai_agent.py  test_cache_service.py  test_circuit_breaker.py  test_n8n_service.py  test_resilience_demo.py
